--- a/index.html
+++ b/index.html
@@ -3982,6 +3982,7 @@
 <div style = "position: relative; margin-top: 20px;">
 <iframe src="https://cdnapisec.kaltura.com/p/723092/sp/72309200/embedIframeJs/uiconf_id/31568551/partner_id/723092?flashvars[mediaProxy.mediaPlayFrom]=3368&iframeembed=true&playerId=kplayer&entry_id=1_d7ekd3d3&flashvars[streamerType]=auto" width="700" height="700" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
 </div>
+<div style = 'padding-bottom: 4%;'></div>
 <h3 id="span-stylecolorgrey-font-size702020-spannbsp-reproducibilidad-en-torno-a-una-aplicacin-webtalk2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web"><span style='color:grey; font-size:70%;'>2020 ·</span>  <a href="/talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web">Reproducibilidad en torno a una aplicación web</a></h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allowfullscreen
@@ -4013,37 +4014,16 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
 <h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for <a href="/publication/chen-etal-inprep/">PSA experiments</a></h3>
-<style>
-    .embed-responsive {
-        position:relative;
-        width:640px;
-        height:300px;
-    }
-    .embed-responsive iframe {
-        position:absolute;
-        width:640px;
-        height:300px;
-        margin-top: 12px;
-    }
-</style>
-<link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
-<div id="mfrIframe" class="mfr mfr-file"></div>
-<script src="https://mfr.osf.io/static/js/mfr.js"></script>
-<script>
-    function renderMfr() {
-        var mfrRender = new mfr.Render("mfrIframe", "https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render");
-    }
-    if (window.$) {
-        renderMfr();
-    } else {
-        var jq = document.createElement('script');
-        document.head.appendChild(jq);
-        jq.onload = function() {
-            renderMfr();
-        }
-        jq.src = 'http://code.jquery.com/jquery-1.11.2.min.js';
-    }
-</script>
+<iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render"
+    style="margin-top:10px"
+    width="80%"
+    scrolling="yes"
+    height="300px"
+    marginheight="0"
+    frameborder="0"
+    allowfullscreen
+    webkitallowfullscreen>
+</iframe>
 
     </div>
   
