--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -724,37 +724,15 @@
     <div class="article-style"><br>
 <h4 id="nbsp-i-classfa-fa-databaseinbsp-a-hrefhttpsosfioe428pgeneral-projecta">  <i class="fa fa-database"></i>  <a href='https://osf.io/e428p/'>General project</a></h4>
 <h4 id="nbsp-i-classfas-fa-eyeinbsp-a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba">  <i class="fas fa-eye"></i>  <a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h4>
-<style>
-    .embed-responsive {
-        position:relative;
-        width:640px;
-        height:300px;
-    }
-    .embed-responsive iframe {
-        position:absolute;
-        width:640px;
-        height:300px;
-        margin-top: 12px;
-    }
-</style>
-<link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
-<div id="mfrIframe" class="mfr mfr-file"></div>
-<script src="https://mfr.osf.io/static/js/mfr.js"></script>
-<script>
-    function renderMfr() {
-        var mfrRender = new mfr.Render("mfrIframe", "https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render");
-    }
-    if (window.$) {
-        renderMfr();
-    } else {
-        var jq = document.createElement('script');
-        document.head.appendChild(jq);
-        jq.onload = function() {
-            renderMfr();
-        }
-        jq.src = 'http://code.jquery.com/jquery-1.11.2.min.js';
-    }
-</script>
+<iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render"
+    width="80%"
+    scrolling="yes"
+    height="300px"
+    marginheight="0"
+    frameborder="0"
+    allowfullscreen
+    webkitallowfullscreen>
+</iframe>
 <h4 id="nbsp-i-classfa-fa-databaseinbsp-a-hrefhttpsosfiowaf48data-from-our-laba">  <i class="fa fa-database"></i>  <a href='https://osf.io/waf48/'>Data from our lab</a></h4>
 <br>
 <p>By contributing to this replication study at the beginning of my PhD, it turned out I followed a <a href="https://doi.org/10.1017/S0140525X18000730"><strong>rule</strong></a>.</p>
