--- a/index.html
+++ b/index.html
@@ -3980,7 +3980,7 @@
 <div style = 'padding-bottom: 7%;'></div>
 <h3 id="span-stylecolorgrey-font-size702021-spannbsp-towards-reproducibility-and-maximally-open-datatalktowards-reproducibility-and-maximally-open-data"><span style='color:grey; font-size:70%;'>2021 ·</span>  <a href="/talk/towards-reproducibility-and-maximally-open-data">Towards reproducibility and maximally-open data</a></h3>
 <div style = "position: relative; margin-top: 20px;">
-<iframe src="https://cdnapisec.kaltura.com/p/723092/sp/72309200/embedIframeJs/uiconf_id/31568551/partner_id/723092?flashvars[mediaProxy.mediaPlayFrom]=3368&iframeembed=true&playerId=kplayer&entry_id=1_d7ekd3d3&flashvars[streamerType]=auto" width="700" height="700" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+<iframe src="https://cdnapisec.kaltura.com/p/723092/sp/72309200/embedIframeJs/uiconf_id/31568551/partner_id/723092?flashvars[mediaProxy.mediaPlayFrom]=3368&iframeembed=true&playerId=kplayer&entry_id=1_d7ekd3d3&flashvars[streamerType]=auto" width="80%" height="660" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
 </div>
 <div style = 'padding-bottom: 4%;'></div>
 <h3 id="span-stylecolorgrey-font-size702020-spannbsp-reproducibilidad-en-torno-a-una-aplicacin-webtalk2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web"><span style='color:grey; font-size:70%;'>2020 ·</span>  <a href="/talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web">Reproducibilidad en torno a una aplicación web</a></h3>
@@ -4016,9 +4016,9 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for <a href="/publication/chen-etal-inprep/">PSA experiments</a></h3>
 <iframe src="https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render"
     style="margin-top:10px"
-    width="80%"
+    width="85%"
     scrolling="yes"
-    height="370px"
+    height="350px"
     marginheight="0"
     frameborder="0"
     allowfullscreen
