--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@
   margin: 15px;
   border: 2px solid green; 
   border-radius: 12px;
-  background: linear-gradient(#DDFFFA 0 0) var(--p, 0) / var(--p, 0) no-repeat;
+  background: linear-gradient(#E6FFE3 0 0) var(--p, 0) / var(--p, 0) no-repeat;
   transition: 0.4s, background-position 0s;
 }
 
@@ -54,4 +54,5 @@
 <span style = 'color: transparent;'> Curriculum vitae </span>
 
 </body>
+
 </html>
