--- a/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
+++ b/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
@@ -719,15 +719,14 @@
 
 <div id="reference" class="section level3">
 <h3>Reference</h3>
-<div style="text-indent:-2em; margin-left:2em;">
+<div style="text-indent:-2em; margin-left:2em; margin-bottom: 3em;">
 <p>Bernabeu, P., Lynott, D., &amp; Connell, L. (2021). <em>Preregistration: The interplay between linguistic and embodied systems in conceptual processing</em>. OSF. <a href="https://osf.io/ftydw" class="uri">https://osf.io/ftydw</a></p>
 </div>
-<p><br></p>
 </div>
 <div id="related-references" class="section level3">
 <h3>Related references</h3>
-<div style="border-color: lightgrey; overflow: auto; color: darkblue; font-size: 90%; height: 700px; overflow-wrap: normal; padding-right: 1em;">
-<div style="text-indent: -2em; margin-left: 2em; color: darkgrey;">
+<div style="border-color: lightgrey; overflow: auto; font-size: 90%; height: 700px; overflow-wrap: normal; padding-right: 1em; margin-top: 1em; margin-bottom: 1.5em;">
+<div style="text-indent: -2em; margin-left: 2em; color: #787878;">
 <p>Aadland, E., Okely, A. D., &amp; Nilsen, A. K. O. (2022). Trajectories of physical activity and sedentary time in Norwegian children aged 3–9 years: A 5-year longitudinal study. <em>International Journal of Behavioral Nutrition and Physical Activity</em>, <em>19</em>(1), 67. <a href="https://doi.org/10.1186/s12966-022-01286-0" class="uri">https://doi.org/10.1186/s12966-022-01286-0</a></p>
 <p>Adams, H., Stefanucci, J., Creem-Regehr, S., &amp; Bodenheimer, B. (2022). Depth Perception in Augmented Reality: The Effects of Display, Shadow, and Position. <em>2022 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)</em>, 792–801. <a href="https://doi.org/10.1109/VR51125.2022.00101" class="uri">https://doi.org/10.1109/VR51125.2022.00101</a></p>
 <p>Ageel, M. (2022). Pandemic Critical Care Research during the COVID-19 (2020-2022): A Bibliometric Analysis Using VOSviewer. <em>BioMed Research International</em>, <em>2022</em>, 1–13. <a href="https://doi.org/10.1155/2022/8564649" class="uri">https://doi.org/10.1155/2022/8564649</a></p>
