--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -756,15 +756,13 @@
 <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Online book </h3></button>
 </a>
 <br>
-<br>
 <h3 id="reference">Reference</h3>
-<div style = "text-indent:-2em; margin-left:2em;">
+<div style = 'text-indent:-2em; margin-left:2em; margin-bottom: 3em;'>
 <p>Bernabeu, P. (2022). <em>Language and sensorimotor simulation in conceptual processing: Multilevel analysis and statistical power</em>. Lancaster University. <a href="https://doi.org/10.17635/lancaster/thesis/1795">https://doi.org/10.17635/lancaster/thesis/1795</a></p>
 </div>
-<br>
 <h3 id="related-references">Related references</h3>
-<div style='border-color: lightgrey; overflow: auto; color: darkblue; font-size: 90%; height: 700px; overflow-wrap: normal;'>
-<div style='text-indent: -2em; margin-left: 2em; color: darkgrey;'>
+<div style = 'border-color: lightgrey; overflow: auto; font-size: 90%; height: 700px; overflow-wrap: normal; padding-right: 1em; margin-top: 1em; margin-bottom: 1.5em;'>
+<div style = 'text-indent: -2em; margin-left: 2em; color: #787878;'>
 <p>Abrams, M. B., Bjaalie, J. G., Das, S., Egan, G. F., Ghosh, S. S., Goscinski, W. J., Grethe, J. S., Kotaleski, J. H., Ho, E. T. W., Kennedy, D. N., Lanyon, L. J., Leergaard, T. B., Mayberg, H. S., Milanesi, L., Mouček, R., Poline, J. B., Roy, P. K., Strother, S. C., Tang, T. B., &hellip; Martone, M. E. (2022). A Standards Organization for Open and FAIR Neuroscience: The International Neuroinformatics Coordinating Facility. <em>Neuroinformatics</em>, <em>20</em>(1), 25&ndash;36. <a href="https://doi.org/10.1007/s12021-020-09509-0">https://doi.org/10.1007/s12021-020-09509-0</a></p>
 <p>Aburumman, N., Gillies, M., Ward, J. A., &amp; Hamilton, A. F. de C. (2022). Nonverbal communication in virtual reality: Nodding as a social signal in virtual interactions. <em>International Journal of Human-Computer Studies</em>, <em>164</em>, 102819. <a href="https://doi.org/10.1016/j.ijhcs.2022.102819">https://doi.org/10.1016/j.ijhcs.2022.102819</a></p>
 <p>Abu‐Zhaya, R., Arnon, I., &amp; Borovsky, A. (2022). Do Children Use Multi‐Word Information in Real‐Time Sentence Comprehension? <em>Cognitive Science</em>, <em>46</em>(3), e13111. <a href="https://doi.org/10.1111/cogs.13111">https://doi.org/10.1111/cogs.13111</a></p>
