--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,10 @@
 <html>
 
 <head>
+  
+  <title>CV Pablo Bernabeu</title>
+  <link rel='icon' type='image/x-icon' href='https://github.com/pablobernabeu/pablobernabeu.github.io/blob/master/img/icon.jpg?raw=true'>
+  
 <style>
 
 .cv-button {
