--- a/cv/index.html
+++ b/cv/index.html
@@ -76,6 +76,10 @@
     <span style = 'color: transparent;'> CV </span>
     
     <span style = 'color: transparent;'> Curriculum vitae </span>
+
+    <span style = 'color: transparent;'> Research </span>
+
+    <span style = 'color: transparent;'> Work </span>
   
   </body>
 
