--- a/index.html
+++ b/index.html
@@ -4599,7 +4599,7 @@ The hours you invest in learning how to use Zotero …
 
     
     <div class="article-style">
-      Notwithstanding the need for speed in most scientific projects, what should be the minimum acceptable standards in the creation of …
+      In the fast-paced world of scientific research, establishing minimum standards for the creation of research materials is essential. …
     </div>
     
 
