--- a/index.html
+++ b/index.html
@@ -3045,13 +3045,13 @@
 <tr>
 <td>Mar 2024</td>
 <td>Poster</td>
-<td>Is third language learning associated with working memory and implicit learning? (Ngoc Giang My Hoang et al.) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
+<td>Is third language learning associated with working memory and implicit learning? (Ngoc Giang, Bernabeu, &amp; DeLuca) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
 <td><a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
 <td>Mar 2024</td>
 <td>Poster</td>
-<td>Effects of cognitive individual differences on cross-linguistic effects in L3 acquisition (Gabriella Silva et al.) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
+<td>Effects of cognitive individual differences on cross-linguistic effects in L3 acquisition (Silva, Bernabeu, Ngoc Giang, DeLuca, Ivanova, Rothman, &amp; González Alonso) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
 <td><a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
@@ -3321,8 +3321,8 @@
     
 
     <p>After doing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University. In my <a href="/publication/pablo-bernabeu-2022-phd-thesis">thesis</a>, I investigated how conceptual processing—that is, the comprehension of the meaning of words—is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments.</p>
-<p>Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway. I work at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl">C-LaBL</a>. As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I investigate how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain. Earlier, I also worked part-time as a data analyst in the <a href="https://uit.no/research/acqva/project?pid=723990">CLICK Project (Cross-Linguistic Influence of Competing Knowledge)</a>, which investigates multilingualism in heritage speakers.</p>
-<p>Throughout my research, I have used methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. The materials from my research are available at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a> and my CV is <a href="/cv">available here</a>.</p>
+<p>Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway. I work at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl">C-LaBL</a>. As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I investigate how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain. Earlier, I worked as a statistical consultant for the <a href="https://uit.no/research/acqva/project?pid=723990">CLICK Project (Cross-Linguistic Influence of Competing Knowledge)</a>, which investigates multilingualism in heritage speakers.</p>
+<p>Throughout my research, I have used methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. The materials from my research are available at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a>, and my CV is <a href="/cv">available here</a>.</p>
 
 
     <div class="row">
@@ -3335,9 +3335,9 @@
           <li>
             <i class="fa-li fas fa-regular fa-briefcase fa-sm" style="padding-left:17px;"></i>
             <div class="description" style="padding-left:14px;">
-              <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellowship</a>, Nov <strong>2022</strong> &ndash; <em>Nov <strong>2024</strong></em></p>
+              <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellow</a>, Nov <strong>2022</strong> &ndash; <em>Nov <strong>2024</strong></em></p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I am investigating how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I investigate how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognition and Cognitive Science; co-organisation of weekly lunch seminars of <a href="https://uit.no/research/clabl">AcqVA Aurora / C-LaBL</a>.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
@@ -3348,9 +3348,9 @@
           <li>
             <i class="fa-li fas fa-regular fa-briefcase fa-sm" style="padding-left:17px;"></i>
             <div class="description" style="padding-left:14px;">
-              <p class="course" style="color:#515151">Part-time data analysis contribution, Nov 2022 &ndash; Jan 2023</p>
+              <p class="course" style="color:#515151">Statistical consultant, Nov 2022 &ndash; Jan 2023</p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  I worked part-time on data analysis within the <a href="https://uit.no/research/acqva/project?pid=723990">CLICK Project (Cross-Linguistic Influence of Competing Knowledge)</a>, which investigates multilingualism in heritage speakers.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  I worked as a statistical consultant for the <a href="https://uit.no/research/acqva/project?pid=723990">CLICK Project (Cross-Linguistic Influence of Competing Knowledge)</a>, which investigates multilingualism in heritage speakers.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
