--- a/talk/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/talk/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -676,7 +676,27 @@
 
 
 <hr>
-<p>This poster is available to researchers upon request while the study is in progress. Afterwards, it will be made public.</p>
+<div id="figure-1" class="section level4">
+<h4>Figure 1</h4>
+<p>The minimal components of each language are contained in a base file.</p>
+<p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture1.png' width = '95%'></img></p>
+</div>
+<div id="figure-2" class="section level4">
+<h4>Figure 2</h4>
+<p>Frequency of occurrence was controlled.</p>
+<p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture2.png' width = '95%'></img></p>
+</div>
+<div id="figure-3" class="section level4">
+<h4>Figure 3</h4>
+<p>Complex sessions involving conditions for controlling the engagement of specific items.</p>
+<p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture3.png' width = '95%'></img></p>
+</div>
+<div id="figure-4" class="section level4">
+<h4>Figure 4</h4>
+<p>Custom script for sending triggers in OpenSesame to support registration of ERPs.</p>
+<p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture4.png' width = '95%'></img></p>
+<p>The full poster is available to researchers upon request while the study is in progress. Afterwards, it will be made public.</p>
+</div>
 <div id="references" class="section level3">
 <h3>References</h3>
 <p>Cross, Z. R., Zou-Williams, L., Wilkinson, E. M., Schlesewsky, M., &amp; Bornkessel-Schlesewsky, I. (2021). Mini Pinyin: A modified miniature language for studying language learning and incremental sentence processing. <em>Behavior Research Methods, 53(3)</em>, 1218–1239. <a href="https://doi.org/10.3758/s13428-020-01473-6" class="uri">https://doi.org/10.3758/s13428-020-01473-6</a></p>
