--- a/index.html
+++ b/index.html
@@ -3045,13 +3045,13 @@
 <tr>
 <td>Mar 2024</td>
 <td>Poster</td>
-<td>Is third language learning associated with working memory and implicit learning? (Ngoc Giang, Bernabeu, &amp; DeLuca) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
+<td>Is third language learning influenced by working memory, implicit learning and inhibitory control? (Hoang, Bernabeu, Silva, González Alonso, Rothman, &amp; DeLuca) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
 <td><a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
 <td>Mar 2024</td>
 <td>Poster</td>
-<td>Effects of cognitive individual differences on cross-linguistic effects in L3 acquisition (Silva, Bernabeu, Ngoc Giang, DeLuca, Ivanova, Rothman, &amp; González Alonso) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
+<td>Effects of cognitive individual differences on cross-linguistic effects in L3 acquisition (Silva, Bernabeu, Hoang, DeLuca, Ivanova, Rothman, &amp; González Alonso) <span style = 'color: grey;'>[further information available to researchers upon request while study in progress]</span></td>
 <td><a href="https://site.uit.no/acqvalab/acqva-aurora-closing-event-8th-march-2024">AcqVA Aurora Closing Event</a>, UiT The Arctic University of Norway</td>
 </tr>
 <tr>
@@ -3338,7 +3338,7 @@
               <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellow</a>, Nov <strong>2022</strong> &ndash; <em>Nov <strong>2024</strong></em></p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I investigate how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain.</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognition and Cognitive Science; co-organisation of weekly lunch seminars of <a href="https://uit.no/research/clabl">AcqVA Aurora / C-LaBL</a>.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognition and Cognitive Science; co-organisation of weekly Lunch Seminars of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2">C-LaBL</a>.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:18px; text-indent:-0.8em; margin-left:1em;"></p>
@@ -3373,7 +3373,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109).html">PhD Psychology with graduate teaching scholarship</a>, <strong>2018&ndash;2022</strong></p>
               <p class="institution" style="color:#5B5B5B">Lancaster University (United Kingdom)</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognitive Science and for Psychological Science Accelerator; development of website for open science group in my department (&lsquo;Prospr&rsquo;).</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognitive Science and for Psychological Science Accelerator; development of website for open science group in my department.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109)/activities.html">Activities</a></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
