--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -694,22 +694,22 @@
 <hr>
 <div id="figure-1" class="section level4">
 <h4>Figure 1</h4>
-<p>The minimal components of each language are contained in a base file.</p>
+<p><em>The minimal components of each language are contained in a base file.</em></p>
 <p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture1.png' width = '95%'></img></p>
 </div>
 <div id="figure-2" class="section level4">
 <h4>Figure 2</h4>
-<p>Frequency of occurrence was controlled.</p>
+<p><em>Frequency of occurrence was controlled.</em></p>
 <p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture2.png' width = '95%'></img></p>
 </div>
 <div id="figure-3" class="section level4">
 <h4>Figure 3</h4>
-<p>Complex sessions involving conditions for controlling the engagement of specific items.</p>
+<p><em>Complex sessions involving conditions for controlling the engagement of specific items.</em></p>
 <p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture3.png' width = '95%'></img></p>
 </div>
 <div id="figure-4" class="section level4">
 <h4>Figure 4</h4>
-<p>Custom script for sending triggers in OpenSesame to support registration of ERPs.</p>
+<p><em>Custom script for sending triggers in OpenSesame to support registration of ERPs.</em></p>
 <p><img style = 'margin-top: 0; margin-bottom: 6%;' src = 'images/Picture4.png' width = '95%'></img></p>
 <div class="alert alert-warning" role="alert" style="padding-bottom: 0; margin-top: 6%; margin-bottom: 6%;">
 <p>The poster is available to researchers upon request while the study is in progress. Afterwards, it will be made public.</p>
