--- a/publication/bernabeu-2017-mphil-thesis/index.html
+++ b/publication/bernabeu-2017-mphil-thesis/index.html
@@ -571,7 +571,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs [Master&#39;s thesis]</h1>
+  <h1>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs [Master's thesis]</h1>
 
   
 
