--- a/presentation/index.html
+++ b/presentation/index.html
@@ -563,12 +563,12 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/" >Making research materials Findable, Accessible, Interoperable and Reusable (FAIR)</a>
+      <a href="/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/" >Making research materials <b>F</b>indable, <b>A</b>ccessible, <b>I</b>nteroperable and <b>R</b>eusable</a>
     </h3>
 
     
     <div class="article-style">
-      To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …
+      <p>To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …</p>
     </div>
     
 
