--- a/index.html
+++ b/index.html
@@ -3165,7 +3165,7 @@
 <tr>
 <td>Jan, Mar 2015</td>
 <td>Poster</td>
-<td><a href="http://dx.doi.org/10.13140/RG.2.1.3532.9122/2">Linguistic relativity of motion events: Walking down the cline</a></td>
+<td><a href="http://dx.doi.org/10.13140/RG.2.1.3532.9122/2">Linguistic relativity in motion</a></td>
 <td>Netherlands Graduate School of Linguistics (U. Amsterdam), Juniorendag (Radboud U.)</td>
 </tr>
 </tbody>
