--- a/presentation/index.html
+++ b/presentation/index.html
@@ -568,7 +568,7 @@
 
     
     <div class="article-style">
-      <p>To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …</p>
+      To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …
     </div>
     
 
