--- a/presentation/index.html
+++ b/presentation/index.html
@@ -568,7 +568,7 @@
 
     
     <div class="article-style">
-      To err is human, but when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …
+      To err is human. Yet, when it comes to creating research materials, mistakes can be reduced by sharing more of our work and by using …
     </div>
     
 
