--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -776,7 +776,7 @@
 </div>
 <div id="snippet-2" class="section level4">
 <h4>Snippet 2</h4>
-<p><em>Frequency of occurrence was controlled.</em></p>
+<p><em>Tests were set throughout the workflow to control the frequency of some categories (R code).</em></p>
 <div style="margin-top: 0; margin-bottom: 6%;">
 <pre class="r"><code>columns_to_check = c(&#39;noun1_gender&#39;, &#39;number&#39;, &#39;person&#39;, 
                      &#39;verb&#39;, &#39;noun1&#39;, &#39;wrapup_noun&#39;)
@@ -797,7 +797,7 @@ for(i in seq_along(columns_to_check)) {
 </div>
 <div id="snippet-3" class="section level4">
 <h4>Snippet 3</h4>
-<p><em>Complex sessions involving conditions for controlling the engagement of specific items.</em></p>
+<p><em>OpenSesame setup involved conditions to adjust parameters in each session (Python code).</em></p>
 <div style="margin-top: 0; margin-bottom: 6%;">
 <pre class="python"><code>participant_parameters = 
   pd.read_csv(exp.get_file(&#39;../parameters per participant/&#39; + 
