--- a/index.html
+++ b/index.html
@@ -3321,7 +3321,7 @@
     
 
     <p>After doing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University. In my <a href="/publication/pablo-bernabeu-2022-phd-thesis">thesis</a>, I investigated how conceptual processing—that is, the comprehension of the meaning of words—is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments.</p>
-<p>Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway. I work at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl">C-LaBL</a>.</p>
+<p>Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway. I work at the <a href="https://en.uit.no/enhet/isk">Department of Language and Culture</a>, and specifically within the <a href="https://site.uit.no/polar">PoLaR Lab</a> and <a href="https://uit.no/research/clabl"><span style = "white-space: nowrap;">C-LaBL</span></a>.</p>
 <p>Throughout my research, I have used methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. The materials from my research are available at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a>, and my CV is <a href="/cv">available here</a>.</p>
 
 
@@ -3338,7 +3338,7 @@
               <p class="course" style="color:#515151"><a href="https://en.uit.no/go/target/789811">Postdoctoral fellow</a>, Nov <strong>2022</strong> &ndash; <em>Nov <strong>2024</strong></em></p>
               <p class="institution" style="color:#5B5B5B">UiT The Arctic University of Norway</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  As a member of the <a href="https://app.cristin.no/projects/show.jsf?id=2559611">LESS Project (Language Economy through Transfer Source Selectivity)</a>, I investigate how language learners coordinate several languages early in the acquisition process, how this process is influenced by the characteristics of the languages, and how the process is reflected in the brain.</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognition and Cognitive Science; co-organisation of weekly Lunch Seminars of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2">C-LaBL</a>.</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognition and Cognitive Science; co-organisation of weekly Lunch Seminars of <a href="https://uit.no/research/acqva#747906_buttoncont1">AcqVA Aurora</a> and <a href="https://uit.no/research/clabl#836271_buttoncont2"><span style = "white-space: nowrap;">C-LaBL</span></a>.</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:18px; text-indent:-0.8em; margin-left:1em;"></p>
